--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/148/148717.png" type="image/icon type">
     <link rel="stylesheet" href="dong_nai_home.css">
     <link rel="stylesheet" href="styles-common.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EJ054NM3TX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EJ054NM3TX');
+</script>
 </head>
 
 <body class="body">
