update source code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Đồng Nai là một một điêm du lịch lý tưởng cho nhưng chuyến đi ngắn nhưng không làm mất đi cảm giác mới lạ và tạo sự nhàm chán"/>
+    <meta name="keywords" content="Du lịch Đồng Nai,Đồng Nai Travel, Khám phá Đồng Nai, khám phá, Nghỉ Dưỡng, Tham quan, Thác đá Hàn, Núi chứa Chan">
     <title>Đồng Nai Travel</title>
     <!-- <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/3387/premium/3387987.png?token=exp=1651413483~hmac=594fc2be2b6d82ededdfc81cb233d4e3" type="image/icon type"> -->
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/148/148717.png" type="image/icon type">
